new mobile portfolio heading font sizes and refinement

--- a/portfolio.html
+++ b/portfolio.html
@@ -67,13 +67,14 @@
 								<p class="port-heading">Product experience design for BLG digital campaign: Helping&nbsp;you innovate, connect and&nbsp;succeed |&nbsp;2021</p><img alt="Carousel Bootstrap Third" src="images/uxui-mobile.jpg" class="portfolio_images-mobile">
 							</div>
 						</div>
+						
 						<div class="item">
 							<div class="ipad displaynone">
 								<a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;"><p class="port-heading-org">Product experience design for BLG Beyond<br> Click to view page | 2021 - 2022</p>
 								<img alt="Carousel Bootstrap Third" src="images/beyond.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto;"></a>
 							</div>
 							<div class="imac displaynone">
-								<a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;"><p class="port-heading"><b>Product experience design for BLG Beyond.<br>Click&nbsp;to view page | 2021 - 2022</b></p><img alt="Carousel Bootstrap Third" src="images/beyond-mobile.jpg" class="portfolio_images-mobile"></a>
+								<p class="port-heading">Product experience design for BLG Beyond. Click&nbsp;to view page |&nbsp;2021 - 2022</p><img alt="Carousel Bootstrap Third" src="images/beyond-mobile.jpg" class="portfolio_images-mobile">
 							</div>
 						</div>
 						<div class="item">
@@ -106,7 +107,7 @@
 								<img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b.jpg" class="portfolio_images">
 							</div>
 							<div class="imac displaynone">
-								<p class="port-heading">One of my favourite HTML, CSS and JS projects at Blakes:<br>Blakes event eVite for <i>Shania Twain in Concert</i> |&nbsp;2018</p><img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2-mobile.jpg" class="portfolio_images-mobile">
+								<p class="port-heading">One of my favourite HTML, CSS and JS projects at Blakes: Blakes&nbsp;event eVite for <i>Shania Twain in Concert</i> |&nbsp;2018</p><img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2-mobile.jpg" class="portfolio_images-mobile">
 							</div>
 						</div>
 						<div class="item">
