--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
              <p class="i_believe">I believe there's a direct correlation between the evolution of human life with the evolution of digital products. Whether in mobile apps or through desktop experiences, it should be intuitive, informative <em>and/or</em> enhance efficiency, productivity and creativity.<br><br>On a lighter note,<br>whether at work or not,<br>I take my pour over dark coffee pretty&nbsp;seriously. ☕<br><br>When not at work, I enjoy spending time with my family, friends and partner, and going to the gym. I'm always down&nbsp;for&nbsp;a&nbsp;good&nbsp;Netflix binge.</p></div>
 
             <div class="col-md-12" id="labtopresumewidth">
-			<p class="resume-prompt" style="color: cyan; font-family: 'Lato', serif; font-size: 13pt; letter-spacing: .1em; line-height: 2; opacity: 1; margins: auto; text-align: center;">Click on resume to view or download.</p><a href="EDWIN AU.pdf" target="_blank"><img src="EDWIN AU.jpg" alt="resume" title="Download PDF" class="resume_pdf"></a>
+			<p class="resume-prompt" style="color: cyan; font-family: 'Lato', serif; font-size: 13pt; letter-spacing: .1em; line-height: 2; opacity: 1; margins: auto; text-align: center;">Click on resum&eacute; to view or download.</p><a href="EDWIN AU.pdf" target="_blank"><img src="EDWIN AU.jpg" alt="resume" title="Download PDF" class="resume_pdf"></a>
 			  </div>
           </div>
         </div>
