--- a/portfolio-coding-mobile.html
+++ b/portfolio-coding-mobile.html
@@ -25,6 +25,20 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
   </head>
 <body>
+	<div class="hamburger-menu">
+    <input id="menu__toggle" type="checkbox" />
+    <label class="menu__btn" for="menu__toggle">
+      <span></span>
+    </label>
+
+    <ul class="menu__box">
+	  <li><a class="menu__item-header" href="#">Portfolios:</a></li>
+      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio.html">Product and Product Experience Design</a></li>
+      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio-coding-mobile.html">Html, CSS &amp; JS</a></li>
+      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html">Motion Graphics and Social Videos</a></li>
+      <li><a class="menu__item-home" href="index.html">home</a></li>
+    </ul>
+</div>
 <!-- <div class="carolcarolcon Desktop"> -->
 <div class="container_carousel" id="carousel">
 	
