--- a/portfolio-coding-mobile.html
+++ b/portfolio-coding-mobile.html
@@ -44,10 +44,10 @@
 	
 	
 		<div class="container-fluid ninetywidth ipad displaynone">
-			<table style="max-width: 900px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
+			<table style="max-width: 900px; background-color: #fff; margin-left: auto; margin-right: auto; width: 100%;">
 			<tr>
 				<td>
-					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
+					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White-mob.jpg" class="headermred" style="display: block; margin-left: 0;; width: 75%;">
 			<p class="port-heading"><span style="color:dodgerblue;">BLG M&amp;A Google ads</span> in various sizes for Desktop and Mobile |&nbsp;2022</p>
 			</td>
 		</tr>
