Resume and Responsive Revamp

--- a/portfolio-coding1.html
+++ b/portfolio-coding1.html
@@ -52,10 +52,10 @@
 			</table> 
 		<center>
 			<div class="col-md-12 nopadding">  
-				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Desktop-MandA-Design-A-336_x_280/21-BD10503-BLG-MandA-A-336_x_280.html" width="336" height="280" frameborder="0"></iframe>
-				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Desktop-MandA-Design-A-930_x_180/21-BD10503-BLG-MandA-A-930_x_180.html" width="930" height="180" frameborder="0"></iframe>
-				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Desktop-MandA-Design-A-728_x_90/21-BD10503-BLG-MandA-A-728_x_90.html" width="728" height="90" frameborder="0"></iframe>
-				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Mobile-MandA-Design-A-320_x_100/21-BD10503-BLG-MandA-A-320_x_100.html" width="320" height="100" frameborder="0"></iframe>
+				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Desktop-MandA-Design-A-336_x_280/21-BD10503-BLG-MandA-A-336_x_280.html" width="336" height="280" frameborder="0" scrolling="no"></iframe>
+				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Desktop-MandA-Design-A-930_x_180/21-BD10503-BLG-MandA-A-930_x_180.html" width="930" height="180" frameborder="0" scrolling="no"></iframe>
+				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Desktop-MandA-Design-A-728_x_90/21-BD10503-BLG-MandA-A-728_x_90.html" width="728" height="90" frameborder="0" scrolling="no"></iframe>
+				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Mobile-MandA-Design-A-320_x_100/21-BD10503-BLG-MandA-A-320_x_100.html" width="320" height="100" frameborder="0" scrolling="no"></iframe>
 			</div>
 		</center>
 		</div>
@@ -69,8 +69,8 @@
 			</table> 
 		<center>
 			<div class="col-md-12 nopadding">  
-				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Desktop-MandA-Design-A-336_x_280/21-BD10503-BLG-MandA-A-336_x_280.html" width="336" height="280" frameborder="0"></iframe>
-				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Mobile-MandA-Design-A-320_x_100/21-BD10503-BLG-MandA-A-320_x_100.html" width="320" height="100" frameborder="0"></iframe>
+				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Desktop-MandA-Design-A-336_x_280/21-BD10503-BLG-MandA-A-336_x_280.html" width="336" height="280" frameborder="0" scrolling="no"></iframe>
+				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Mobile-MandA-Design-A-320_x_100/21-BD10503-BLG-MandA-A-320_x_100.html" width="320" height="100" frameborder="0" scrolling="no"></iframe>
 			</div>
 		</center>
 	</div>
