--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <link href="stylesheet/carousel_portfolio-coding.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/contact_portfolio-coding.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/media_labtop_portfolio-coding.css" type="text/css" rel="stylesheet">
-	<link href="stylesheet/hamburger.css" type="text/css" rel="stylesheet">
+  	<link href="stylesheet/hamburger.css" type="text/css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
 
@@ -24,7 +24,7 @@
   </head>
 <body>
 <!-- <div class="carolcarolcon Desktop"> -->
-	
+
 <div class="hamburger-menu">
     <input id="menu__toggle" type="checkbox" />
     <label class="menu__btn" for="menu__toggle">
@@ -32,25 +32,122 @@
     </label>
 
     <ul class="menu__box">
-	  <li class="menu__item-header">Portfolios:</li>
-      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio.html">Product and Product Experience Design</a></li>
-      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio-coding-mobile.html"> Html, CSS &amp; JS</a></li>
-      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html"> Motion Graphics and Social Videos</a></li>
-      <li><a class="menu__item-home" href="index.html">Home</a></li>
+      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#resume_movement">About me</a></li>
+      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#concon"> Contact me</a></li>
+      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html">Home</a></li>
     </ul>
 </div>
-	
+
+
+<Table style="width:40vw; margin-left: auto; margin-right: auto; margin-top: 2%;">
+  <tr>
+    <td class="threebythreegrid" colspan="2" style="width:100%; vertical-align: top;">
+      <p class="resume-prompt" style="color: gray; font-family: 'Lato', serif; font-size: 12pt; letter-spacing: .1em; line-height: 2; opacity: 1; margin: auto; margin-top: 1%; margin-bottom:2%; text-align: left;"><span style="font-weight: bold; color: black;">Welcome to my portfolio page</span></br>For more about me, please inquire within: <a href="mailto:edwinfcau@gmail.com"><span style="text-decoration: underline; color: blue;">edwinfcau@gmail.com
+      </span>
+      </a>
+      </p>
+    </td>
+    <td class="threebythreegrid" style="width: 150px;">
+      <img alt="Carousel Bootstrap Second" src="images/Edwin-bio-pic-web.jpg" class="headermred" style="float: right; margin-left: 0px; border-radius: 100px; width: 100px; height: auto;">
+  </td>
+</tr>
+</table>
+
+
+
+
+<Table style="width:40vw; margin-left: auto; margin-right: auto; margin-top: 2%;">
+  <tr>
+    <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
+      <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
+        <img alt="Carousel Bootstrap Third" src="images/beyond.jpg" class="portfolio_images" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.95;">
+      </a>
+  </td>
+
+<td class="threebythreegrid">
+  <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
+    <img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images" text-align="center" style="display: block; margin: auto; transform: scale(1.2);">
+  </a>
+</td>
+<td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
+    <div class="ipad displaynone">
+          <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
+            <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.7;">
+          </a>
+    </td>
+  </tr>
+</table>
+
+<Table style="width:40vw; margin-left: auto; margin-right: auto;">
+  <tr>
+    <td class="threebythreegrid" style="background:grey;  border: 5px solid #ffffff;">
+      <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
+        <img alt="Carousel Bootstrap Third" src="images/blakes.jpg" class="portfolio_images" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: 0.3;">
+      </a>
+  </td>
+
+<td class="threebythreegrid" style="background:#006994;  border: 5px solid #ffffff;">
+  <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
+    <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images" text-align="center" style=" overflow: hidden; display: block; margin-left: auto; margin-right: auto; position: relative; transform: scale(2); opacity: 0.5;">
+  </a>
+</td>
+<td class="threebythreegrid" style="background:#77dd77;  border: 5px solid #ffffff;">
+    <div class="ipad displaynone">
+          <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
+            <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.5;">
+          </a>
+    </td>
+  </tr>
+</table>
+
+<Table style="width:40vw; margin-left: auto; margin-right: auto; ">
+  <tr>
+    <td class="threebythreegrid" style="background: #ff7518;  border: 5px solid #ffffff;">
+      <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
+        <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.6;">
+      </a>
+  </td>
+
+<td class="threebythreegrid" style="background: #1b0000;  border: 5px solid #ffffff;">
+  <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
+    <img alt="Carousel Bootstrap Third" src="images/Starwars.jpg" class="portfolio_images" text-align="center" style="display: block; margin: auto; transform: scale(1.2); opacity: 0.6;">
+  </a>
+</td>
+<td class="threebythreegrid" style="background: #FFB6C1;  border: 5px solid #ffffff;">
+    <div class="ipad displaynone">
+          <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
+            <img alt="Carousel Bootstrap Third" src="images/disneyproduct.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.8;">
+          </a>
+    </td>
+  </tr>
+</table>
+
+<Table style="width:40vw; margin-left: auto; margin-right: auto; ">
+  <tr>
+    <td class="threebythreegrid" style="background: #666666;  border: 5px solid #ffffff;">
+      <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
+        <img alt="Carousel Bootstrap Third" src="images/mred.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.8;">
+      </a>
+  </td>
+
+<td class="threebythreegrid" >
+
+</td>
+<td class="threebythreegrid" >
+    <div class="ipad displaynone">
+
+    </td>
+  </tr>
+</table>
+
+
+<!--
+
 <div class="container_carousel" id="carousel">
 	<div class="container-fluid ninetywidth">
-		  <table style="max-width: 900px; background-color: #fff; margin-left: auto; margin-right: auto; width: 100%;">
-				<tr>
-					<td>
-						<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White-mob.jpg" class="headermred" style="margin-left: 0px;">
-					</td>
-				</tr>
-			</table> 
 
-		 <div class="col-md-12 nopadding">  
+
+		 <div class="col-md-12 nopadding">
 			<div class="carousel slide" id="carousel-768363">
 				<ol class="carousel-indicators">
 				</ol>
@@ -73,8 +170,8 @@
 							</div>
 							<div class="imac displaynone">
 								<a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;" class="port-heading">
-									<img alt="Carousel Bootstrap Third" src="images/beyond-mobile.jpg" class="portfolio_images-mobile" style="margin-left:5px;">	
-								</a>								
+									<img alt="Carousel Bootstrap Third" src="images/beyond-mobile.jpg" class="portfolio_images-mobile" style="margin-left:5px;">
+								</a>
 							</div>
 						</div>
 						<div class="item">
@@ -83,7 +180,7 @@
 								<img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto;">
 							</div>
 							<div class="imac displaynone">
-								<img alt="Carousel Bootstrap Third" src="images/blgwebstore-mobile.jpg" class="portfolio_images-mobile" text-align="center" style="display: block; margin-left: auto; margin-right: auto;">							
+								<img alt="Carousel Bootstrap Third" src="images/blgwebstore-mobile.jpg" class="portfolio_images-mobile" text-align="center" style="display: block; margin-left: auto; margin-right: auto;">
 							</div>
 						</div>
 						<div class="item">
@@ -140,7 +237,7 @@
 								<img alt="Carousel Bootstrap Third" src="images/disneyproduct-mobile.jpg" class="portfolio_images-mobile">
 							</div>
 							<p class="sub-port-heading-org">Working with the team in leading 50+ licensees simultaneously on 300+ products seasonally.<br>Responsibilities include managing online product design approvals and meeting with vendors<br> &amp; licensees on communicating Disney design goals, brand guides and set initiatives</p>
-						</div>	
+						</div>
 						<div class="item">
 							<p class="port-heading-org">Disney Mickey100 x Uniqlo | 2016</p>
 							<div class="ipad displaynone">
@@ -179,7 +276,7 @@
 								<img alt="Carousel Bootstrap Third" src="images/mred-mobile.jpg" class="portfolio_images-mobile">
 							</div>
 						</div>
-						<div> 
+						<div>
 							<a class="left carousel-control" href="#carousel-768363" data-slide="prev">
 							<span class="glyphicon glyphicon-chevron-left"></span></a>
 							<a class="right carousel-control" href="#carousel-768363" data-slide="next">
@@ -190,10 +287,12 @@
 		 </div>
 	</div>
 </div>
-	
+
+-->
+
 <div>
 	<table align="left" height="50px" index="1000" class="portfolio-nav">
-	
+
 	<tr align="left" padding-bottom="50px" margin-top="20px">
 		<td style="text-align: left; width: 350px;" ><p class="nav-title">Portfolios:</p>
 		</td>
@@ -212,15 +311,15 @@
 	</tr>
 	</table>
 </div>
-	
+
 <div class="container_one contactpage" style="background: red;
-  background: -webkit-linear-gradient(white, #ffb288, #f1b351); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(white, #ffb288, #f1b351); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(white, #ffb288, #f1b351); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(white, #ffb288, #f1b351); /* Standard syntax */
-  width: 100vw; height: 16vh; z-index:-2000;">
- <img src="images/city_contact.png" class="img_contact" id="contactme" alt="city">
-	
+  background: -webkit-linear-gradient(white, #33273d, #003c5f); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(white, #33273d, #003c5f); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(white, #33273d, #003c5f); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(white, #33273d, #003c5f); /* Standard syntax */
+  width: 100vw; height: 22vh; margin-top: 2%; z-index:-2000;">
+ <!--<img src="images/city_contact.png" class="img_contact" id="contactme" alt="city"> -->
+
   <!-- <body background="images/marbleBlack.jpg" class="img_img"> -->
 <div class="container_two contact">
       <div class="container_contacts">
@@ -232,8 +331,8 @@
        <!-- <h4 class="facebook" title="Click to view facebook (Currently Inactive)"><a href="http://www.facebook.com/eauwind" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4> -->
 		  <br class="imac displaynone"><br class="imac displaynone">
         <h4 class="instagram" title="+14168803791"><a href="tel:+14168803791" title="+14168803791"><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i></a></h4>
-		  
-  
+
+
 		  <br class="imac displaynone"><br class="imac displaynone">
       </div>
 
