--- a/portfolio.html
+++ b/portfolio.html
@@ -19,36 +19,39 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
 
     <link href="stylesheet/font-awesome.min.css" rel="stylesheet" >
-    <title>edwinau.com</title>
+    <title>Edwin Au</title>
 
   </head>
 <body>
 <!-- <div class="carolcarolcon Desktop"> -->
 
-<div class="hamburger-menu">
-    <input id="menu__toggle" type="checkbox" />
-    <label class="menu__btn" for="menu__toggle">
-      <span></span>
-    </label>
 
-    <ul class="menu__box">
-      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#resume_movement">About me</a></li>
-      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#concon"> Contact me</a></li>
-      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html">Home</a></li>
-    </ul>
-</div>
-
-
-<Table style="width:40vw; margin-left: auto; margin-right: auto; margin-top: 2%;">
+<Table style="width:40vw; margin-left: auto; margin-right: auto; margin-top: 25px;">
   <tr>
     <td class="threebythreegrid" colspan="2" style="width:100%; vertical-align: top;">
-      <p class="resume-prompt" style="color: gray; font-family: 'Lato', serif; font-size: 12pt; letter-spacing: .1em; line-height: 2; opacity: 1; margin: auto; margin-top: 1%; margin-bottom:2%; text-align: left;"><span style="font-weight: bold; color: black;">Welcome to my portfolio page</span></br>For more about me, please inquire within: <a href="mailto:edwinfcau@gmail.com"><span style="text-decoration: underline; color: blue;">edwinfcau@gmail.com
-      </span>
-      </a>
-      </p>
+      <div class="hamburger-menu">
+          <input id="menu__toggle" type="checkbox" />
+          <label class="menu__btn" for="menu__toggle" style="left: 30%; top: 7%;">
+            <span></span>
+          </label>
+
+          <ul class="menu__box">
+            <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#resume_movement">About me</a></li>
+            <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#concon"> Contact me</a></li>
+            <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html">Home</a></li>
+          </ul>
+      </div>
+
+      <p class="resume-prompt" style="margin-left: 7%; color: gray; font-family: 'Lato', serif; font-size: 12pt; letter-spacing: .1em; line-height: 2; opacity: 1; padding-left: 5%; margin-top: -1%; margin-bottom:2%; text-align: left;"><span style="font-weight: bold; color: black;">Welcome to my portfolio page</span></br>For more about me, please  <a href="mailto:edwinfcau@gmail.com">
+        <span style="text-decoration: underline; color: blue;"> inquire</span></a>: edwinfcau@gmail.com</p>
     </td>
-    <td class="threebythreegrid" style="width: 150px;">
-      <img alt="Carousel Bootstrap Second" src="images/Edwin-bio-pic-web.jpg" class="headermred" style="float: right; margin-left: 0px; border-radius: 100px; width: 100px; height: auto;">
+
+    <td class="threebythreegrid" style="width: 125px; overflow: visible;">
+      <a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html" style="padding:0px; border: none;">
+      <center>
+      <img alt="Carousel Bootstrap Second" src="images/Edwin-bio-pic-web.jpg" class="headermred" style="float: right; margin-left: 0px; border-radius: 100px; width: 100px; height: auto; margin-bottom: 15%; outline: 2px solid #dcdcdc; outline-offset: 6px;">
+      <p style="color: #666666; font-family: 'lato', serif; font-size: 12pt; font-weight: bold; padding-left:3%;">Edwin</p>
+    </center></a>
   </td>
 </tr>
 </table>
@@ -56,7 +59,7 @@
 
 
 
-<Table style="width:40vw; margin-left: auto; margin-right: auto; margin-top: 2%;">
+<Table style="width:40vw; margin-left: auto; margin-right: auto; margin-top: 1%;">
   <tr>
     <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
       <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
