--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@ height:5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5v
 <center>
             <div class="col-md-12" id="labtopresumewidth">
 			<p class="resume-prompt" style="color: gray; font-family: 'Lato', serif; font-size: 14pt; font-weight: bold; letter-spacing: .1em; line-height: 2; opacity: 1; margin: auto; margin-top: 0; margin-bottom:2%; text-align: center;">Who I am and what I do</p>
-				<div id="resume_movement"><a href="EDWIN AU.pdf" target="_blank"><img src="EDWIN AU.jpg" alt="resume" title="Download PDF" class="resume_pdf" ></a></div>
+				<div id="resume_movement" style="margin-left:auto; margin-right: auto;"><a href="EDWIN AU.pdf" target="_blank"><img src="EDWIN AU.jpg" alt="resume" title="Download PDF" class="resume_pdf" ></a></div>
 			  </div>
-        <center>
+      </center>
           </div>
         </div>
       </div>
