removed carousel CSS

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="stylesheet/nut.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/quote.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/app.css" type="text/css" rel="stylesheet">
-    <link href="stylesheet/carousel.css" type="text/css" rel="stylesheet">
+  <!--  <link href="stylesheet/carousel.css" type="text/css" rel="stylesheet"> -->
     <link href="stylesheet/contact.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/media_labtop.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/hamburger.css" type="text/css" rel="stylesheet">
@@ -65,7 +65,7 @@
           <ul class="menu__box">
             <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#resume_movement">About me</a></li>
             <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio.html">Portfolio</a></li>
-            <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#concon"> Contact me</a></li>
+            <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#concon">Contact me</a></li>
           </ul>
       </div>
 
@@ -176,7 +176,7 @@ height:5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5v
              <p class="i_believe">I'm passionate at creating dynamic digital products by extensively researching client/market needs and using optimized wireframes, strategical call-to-action's and industry best practices that put user experience and design interface at the forefront.  <br><br>Whether at work or not,<br>I take my pour over coffee pretty&nbsp;seriously ☕<br><br>When not at work, I enjoy spending quality time with my family, friends and partner.  I workout at the gym frequently and am always down for a good Netflix binge.</p> -->
            <!-- </div>  -->
 <center>
-            <div class="col-md-12" id="labtopresumewidth">
+            <div id="labtopresumewidth">
 			<p class="resume-prompt" style="color: gray; font-family: 'Lato', serif; font-size: 14pt; font-weight: bold; letter-spacing: .1em; line-height: 2; opacity: 1; margin: auto; margin-top: 0; margin-bottom:2%; text-align: center;">Who I am and what I do</p>
 				<div id="resume_movement" style="margin-left:auto; margin-right: auto;"><a href="EDWIN AU.pdf" target="_blank"><img src="EDWIN AU.jpg" alt="resume" title="Download PDF" class="resume_pdf" ></a></div>
 			  </div>
